# TrailUp

./: .gitattributes  .gitignore  CLAUDE.md  README.md  app.json  docker-compose.yml  package-lock.json  package.json
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 20260405_01_langgraph_checkpoints.py  20260405_02_materiais_gerados.py  20260406_01_conteudo_personalizado.py  20260406_02_conteudo_personalizado_ai_patch.py  20260406_03_telemetria_tables.py  20260408_01_fontes_personalizacao.py  20260410_01_personalizacao_jobs.py  20260410_02_ia_decision_logs.py  20260410_03_conteudo_personalizado_unique.py  20260410_04_questoes_nota_estabelecida.py  20260410_05_personalizacao_artefatos.py  20260410_06_job_targets_unique_per_content.py  20260413_01_classe_mapa_tema_sync.py  20260415_01_media_render_jobs.py  20260416_01_media_render_profile_dedupe_indexes.py  20260420_01_classe_perfil_summary.py  20260420_02_aluno_mental_state_history.py
api/app/: __init__.py  main.py
api/app/adapters/: __init__.py  (+5 more)
api/tests/: conftest.py  test_api.py  test_auth.py  test_behavioral_personalization.py  test_brainhex_generation.py  test_checkpoint_retention.py  test_design_tokens_aaa.py  test_graph_invocation.py  test_graph_nodes.py  test_group_analysis.py  test_ingestion_pptx.py  test_linear_analysis_pipeline.py  test_media_pipeline.py  test_mental_state.py  test_personalizacao_jobs_loop.py  test_personalizacao_service.py  test_repositories.py  test_startup.py  test_storage_service.py
(+543 files in other folders)
