[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trailup-api"
version = "0.1.0"
description = "MVP da API TrailUp com FastAPI, LangGraph e Supabase."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "psycopg[binary,pool]>=3.1.18",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=0.1.0",
  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-google-genai>=1.0.0",
  "langsmith>=0.1.0",
  "sse-starlette>=2.1.3",
  "python-multipart>=0.0.9",
  "PyJWT>=2.8.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "python-pptx>=0.6.23",
  "gTTS>=2.5.4",
  "moviepy>=1.0.3",
  "Pillow>=10.3.0",
  "lameenc>=1.8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "anyio>=4.3.0",
  "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["app*", "alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
